--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -26,7 +26,7 @@ $button-color: rgb(49, 56, 83);
 
 
 // Update some of Bulma's component variables
-$body-background-color: #f1eae5;
+$body-background-color: #8a9ef5;
 $control-border-width: 2px;
 $input-border-color: transparent;
 $input-shadow: none;
