--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -87,7 +87,7 @@ p.title {
 
 
 #parallax-1 {
-  background: url(https://source.unsplash.com/featured/?festivals);
+  background: url(https://images.unsplash.com/photo-1533174072545-7a4b6ad7a6c3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80);
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -99,28 +99,3 @@ p.title {
   background: 010001;
 }
 
-#parallax-2 {
-  background: url(https://source.unsplash.com/featured/?events);
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border-top: 10px solid 010001;
-}
-
-#parallax-2 hr {
-  background: 010001;
-}
-
-#parallax-3 {
-  background: url(https://source.unsplash.com/featured/?concerts);
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border-top: 10px solid 010001;
-}
-
-#parallax-3 hr {
-  background: 010001;
-}
