--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -39,6 +39,10 @@ $title-size: 60px;
   border-radius: 0px;
 }
 
+.message-header {
+  background-color: #010001;
+}
+
 
 .small-picture {
   max-width: 150px;
